force-app/main/default/objects/Compliance_Workflow_Template__mdt/Compliance_Workflow_Template__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Workflow Template</label>
    <pluralLabel>Compliance Workflow Templates</pluralLabel>
    <description>Workflow templates defining multi-step compliance evaluation and remediation sequences</description>
</CustomObject>