force-app/main/default/objects/Compliance_Workflow_Template__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this workflow template</description>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>