force-app/main/default/objects/Compliance_Workflow_Template__mdt/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <description>Compliance framework this workflow applies to</description>
    <label>Framework</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>