force-app/main/default/objects/Compliance_Workflow_Template__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this workflow template is active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>