force-app/main/default/objects/Compliance_Workflow_Template__mdt/fields/Steps_JSON__c.field-meta.xml
<CustomField>
    <fullName>Steps_JSON__c</fullName>
    <description>JSON array defining workflow steps with order, type, and configuration</description>
    <label>Steps JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>