force-app/main/default/objects/Compliance_Workflow_Template__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Display name for this workflow template</description>
    <label>Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>